--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "html-webpack-plugin": "^5.3.2",
     "path": "^0.12.7",
+    "script-ext-html-webpack-plugin": "^2.1.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
     "vuetify": "^2.5.8",
