--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "html-webpack-plugin": "^5.3.2",
+    "js-cookie": "^3.0.1",
     "path": "^0.12.7",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "vue": "^2.6.11",
